Fix gallery row alignment

--- a/src/gallery/gallery.css
+++ b/src/gallery/gallery.css
@@ -1,3 +1,12 @@
+.gallery-image {
+  margin: auto;
+  align-content: center;
+}
+.gallery-image img {
+  box-shadow: var(--light);
+  padding: 5px;
+}
+
 .main-gallery {
   display: flex;
   justify-content: space-evenly;
